# tetron

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  PLAN.md  PROPOSAL.md  README.md  SECURITY.md  SPEC_PROPOSAL_rayfish_fork.md  TESTING.md  TODO.md  build.rs  cliff.toml  justfile  reconcile.py
.cargo/: audit.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: nightly.yml  release.yml
.libspec/: libspec.jsonl
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/uniffi/ray_mobile/: ray_mobile.kt
android/app/src/main/java/xyz/rayfish/android/: MainActivity.kt  RayfishVpnService.kt
android/app/src/main/java/xyz/rayfish/android/ui/screens/: HomeScreen.kt  NetworkDetailScreen.kt  NetworksScreen.kt
benches/: README.md  forward.rs
contrib/: com.pitopi.vpn.plist  com.tetron.vpn.plist  pitopi.service  tetron.service  torpedo.service
docs/: BACKGROUND.md  COMMANDS.md  DECISIONS.md  EXAMINATION_REPORT_2026-07-16.md  HOWTO.md  IDEAS_LaptopFleet.md  PLAN.md  PLAN_invite_keys.md  PRIVILEGE_TIERS.md  PROPOSAL.md  README.md  SECURITY.md  SUBNET_COLLISION.md  TESTING.md  TEST_LOG-2026-07-16.md  TEST_PROCEDURE.md  TODO.md  Tetron_AnatomyofaMesh.html  UPSTREAM_CHANGES.md  book.md  css2
docs/superpowers/plans/: 2026-06-19-multi-peer-mesh.md
ray-mobile/src/: lib.rs
ray-proto/: Cargo.toml
ray-proto/src/: ipc.rs  lib.rs
spec/: design_spec.py  main_spec.py
src/: acl.rs  apply.rs  audit.rs  config.rs  control.rs  daemon.rs  dht.rs  dns.rs  dns_config.rs  dns_packet.rs  dns_resolver.rs  firewall.rs  forward.rs  hostname.rs  identity.rs  invite.rs  ipc.rs  lib.rs  logdir.rs  main.rs  membership.rs  onepassword.rs  packet.rs  peercache.rs  peers.rs  picker.rs  ratelimit.rs  revocation.rs  room_code.rs  shutdown.rs  ssh.rs  stats.rs  style.rs  transport.rs  tun.rs  update.rs
src/cli/: admin.rs  alias.rs  connect.rs  firewall.rs  invite.rs  mod.rs  network.rs  open.rs  pair.rs  service.rs  status.rs  update.rs
src/daemon/: connect_service.rs  dns_manager.rs  file_service.rs  mod.rs
src/daemon/handlers/: create_join.rs  diagnostics.rs  firewall.rs  runtime.rs
src/daemon/mesh/: accept.rs  admin.rs  alias.rs  bootstrap.rs  connect.rs  coordinator.rs  create_join.rs  diagnostics.rs  files.rs  firewall.rs  invite.rs  invite_handler.rs  invite_store.rs  join.rs  mod.rs  publish.rs  reconverge.rs  rename.rs  runtime.rs  select.rs
tests/: e2e.sh
tests/bench/: README.md  provision.sh  run.sh  teardown.sh
tests/e2e/: README.md
tests/e2e/closed-net/: README.md  run.sh
tests/e2e/connect/: README.md  provision.sh  run.sh  teardown.sh
tests/e2e/device-cert/: run.sh
tests/e2e/dns/: README.md  run.sh
tests/e2e/firewall/: README.md  run.sh
tests/e2e/reliability/: README.md  run.sh
tests/e2e/restore-offline/: README.md  run.sh
tests/lib/: common.sh
tetron-proto/: Cargo.toml
tetron-proto/src/: firewall.rs  ipc.rs  lib.rs  policy.rs
