[package]
name = "tetron"
version = "0.5.0"
edition = "2024"
rust-version = "1.91"
authors = ["Dario", "ErikAllanKincaid"]
description = "P2P mesh VPN powered by iroh — connect peers by cryptographic identity, not IP address"
license = "MPL-2.0"
repository = "https://github.com/ErikAllanKincaid/tetron"
homepage = "https://github.com/ErikAllanKincaid/tetron"
readme = "README.md"
keywords = ["vpn", "p2p", "mesh", "networking", "iroh"]
categories = ["network-programming", "command-line-utilities"]

# The repo root is both the `tetron` package (binary `tetron`) and the workspace
# root. `tetron-proto` is a member crate holding the shared IPC wire protocol.
[workspace]
members = ["tetron-proto"]

# Strip debug symbols from release builds. This is what shrinks the Android
# release .so from hundreds of MiB down to tens of MiB. Do not add
# `panic = "abort"` here: UniFFI's generated bindings need `panic = "unwind"`
# (the default), so panic is left unset.
[profile.release]
strip = "symbols"

[[bin]]
name = "tetron"
path = "src/main.rs"

[features]
tor = ["dep:iroh-tor-transport"]

[dependencies]
tetron-proto = { path = "tetron-proto", version = "0.5.0" }
anyhow = "1"
blake3 = { version = "1", features = ["serde"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
ahash = "0.8"
clap_complete = "4"
# Token-bucket rate limiter guarding inbound control streams against floods
# (src/ratelimit.rs). One per control-listener task; no shared state.
ratelimit = "0.10"
dashmap = "6"
dirs = "6.0.0"
futures = "0.3"
iroh = { version = "1", features = ["unstable-custom-transports"] }
iroh-tor-transport = { version = "0.1", optional = true }
iroh-metrics = { version = "1", features = ["metrics"] }
iroh-dns = "1"
iroh-blobs = { version = "0.103", default-features = false, features = ["fs-store"] }
rand = "0.10"
rmp-serde = "1"
libc = "0.2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "registry"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.13"
toml = "1.1"
# Format-agnostic config loading for `ray apply` specs (YAML/TOML/JSON by
# extension). Read-only; `--dry-run`/`--example` output uses serde_yml.
config = { version = "0.15", default-features = false, features = ["yaml", "toml"] }
url = "2"
hex = "0.4.3"
smol_str = { version = "0.3.6", features = ["serde"] }
arc-swap = "1.9.1"
qr2term = "0.3.3"
bs58 = "0.5.1"
chacha20poly1305 = "0.10.1"
argon2 = "0.5.3"

async-trait = "0.1"
bytesize = "2.4.0"

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

# Microbenchmarks for the per-packet data path (header parse + the zero-copy
# Bytes hand-off). Run with `cargo bench`. `harness = false` lets Criterion own
# `fn main`.
[[bench]]
name = "forward"
harness = false

# The `tun` crate wraps the OS TUN device and is inherently desktop: on Android
# the packet interface is a `VpnService` fd handed in from Kotlin, not an OS
# device. Gating it out of the Android build keeps the library free of a
# dependency that can't cross-compile there. The desktop TUN code in `src/tun.rs`
# is likewise `#[cfg(not(target_os = "android"))]`.
[target.'cfg(not(target_os = "android"))'.dependencies]
tun = { version = "0.8.13", features = ["async"] }

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.21.0"

[target.'cfg(windows)'.dependencies]
# Enables ANSI escape processing on legacy Windows consoles (no-op on modern terminals).
enable-ansi-support = "0.3"
